<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHomeActivePackages"
        android:id="@+id/btnHomeActivePackages"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHomeActiveTransport"
        android:id="@+id/btnHomeActiveTransports"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHomeDeliveredPackages"
        android:id="@+id/btnHomeDeliveredPackages"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHomeFinishedTransports"
        android:id="@+id/btnHomeFinishedTransports"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHomeLocationTracker"
        android:id="@+id/btnHomeLocationTracker"
        android:layout_gravity="center_horizontal" />
</LinearLayout>